chore: fix various IntelliJ inspection warnings (#532)