@@ -64,10 +64,7 @@ public class KafkaConnectArtefactManager extends ArtefactManager {
             .collect(Collectors.toList());
 
     List<IOException> errors =
-        list.stream()
-            .filter(Either::isLeft)
-            .map(e -> (IOException) e.getLeft().get())
-            .collect(Collectors.toList());
+        list.stream().filter(Either::isLeft).map(e -> (IOException) e.getLeft().get()).toList();
     if (!errors.isEmpty()) {
       throw new IOException(errors.get(0));
     }
